cabal-version:      2.4
name:               ikmk
version:            0.1.0.0

extra-source-files:
    CHANGELOG.md
    README.md

source-repository head
  type: git
  location: https://github.com/kumackey/ikmk

library
  exposed-modules:
      FizzBuzz.FizzBuzz
    , DarkLaunch.Store
  other-modules:
      Paths_ikmk
  hs-source-dirs:
      src
  build-depends:
      base >=4.7 && <5
  default-language: Haskell2010

executable ikmk
    main-is:          Main.hs
    build-depends:
        base ^>=4.16.4.0
      , cassava
      , vector
      , bytestring
      , ikmk
    hs-source-dirs:   main
    default-language: Haskell2010
